added functionality to rip meta data from Line website
